RESOLVED FIXED305500
REGRESSION(299380@main): [Skia] ref-test fast/text/text-combine-placement.html fails
https://bugs.webkit.org/show_bug.cgi?id=305500
Summary REGRESSION(299380@main): [Skia] ref-test fast/text/text-combine-placement.htm...
Carlos Alberto Lopez Perez
Reported 2026-01-14 13:13:00 PST
ref-test fast/text/text-combine-placement.html fails since 299380@main with this diff: https://build.webkit.org/results/WPE-Linux-64-bit-Release-Tests/305586@main%20(24590)/fast/text/text-combine-placement-diffs.html Regressions: Unexpected image-only failures (1) fast/text/text-combine-placement.html [ ImageOnlyFailure ] I checked to revert 299380@main locally and then the test passes. The problem is that after 299380@main the tatechuyoko.svg is not loaded and it fallbacks to the system font. In tatechuyoko.svg font the glyph for "A" and "&#x306e;" are identical (are two squares) $ grep -E 'unicode="(A|&#x306e;)"' LayoutTests/fast/text/resources/tatechuyoko.svg <glyph unicode="A" horiz-adv-x="256" d="m 0 0 v 128 h 128 v -128 z"/> <glyph unicode="&#x306e;" horiz-adv-x="256" d="m 0 0 v 128 h 128 v -128 z"/> So that is why the test passes when that font is loaded, but if isn't it fails because in the system fallback font the glyph for "&#x306e;" is the Japanese character "の"
Attachments
Carlos Alberto Lopez Perez
Comment 1 2026-01-14 15:25:05 PST
This test was previously marked as "Failure" but that expectation is wrong for a ref-test. A ref-test can't have a "Failure" result, because when it fails it will give instead a "ImageOnlyFailure" result (due to the pixel comparison between the test.html and the test-expected.html) Expectations updated at 305610@main
Carlos Alberto Lopez Perez
Comment 2 2026-01-14 17:36:25 PST
EWS
Comment 3 2026-01-15 13:02:23 PST
Committed 305664@main (546871d49b20): <https://commits.webkit.org/305664@main> Reviewed commits have been landed. Closing PR #56604 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-01-15 13:03:13 PST
Note You need to log in before you can comment on or make changes to this bug.